tools/k8s/dev/crowdtrust-api/crowdtrust-api.k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crowdtrust-api
  labels:
    component: crowdtrust-api
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: crowdtrust-api
      tier: backend
  template:
    metadata:
      labels:
        component: crowdtrust-api
        tier: backend
    spec:
      containers:
        - name: crowdtrust-api
          image: crowdtrust-api.dev
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
