tools/k8s/dev/crowdtrust-api/crowdtrust-api.k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowdtrust-api
  labels:
    component: crowdtrust-api
    tier: backend
spec:
  selector:
    component: crowdtrust-api
    tier: backend
  ports:
    - port: 3000
      targetPort: 3000
